force-app/main/default/objects/Animal_Location_Stay__c/Animal_Location_Stay__c.object-meta.xml
<CustomObject>
    <description
  >Tracks each placement of an episode in a housing unit over time.</description>
    <label>Animal Location Stay</label>
    <nameField>
        <label>Location Stay Number</label>
        <displayFormat>STAY-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Location Stays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>