force-app/main/default/objects/Animal_Location_Stay__c/fields/Animal_Episode__c.field-meta.xml
<CustomField>
    <fullName>Animal_Episode__c</fullName>
    <description>Episode that owns this location stay.</description>
    <label>Animal Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Location Stays</relationshipLabel>
    <relationshipName>Location_Stays</relationshipName>
    <type>MasterDetail</type>
</CustomField>