force-app/main/default/objects/Animal_Location_Stay__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <description>Date and time the stay ended.</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>