force-app/main/default/objects/Animal_Location_Stay__c/fields/Housing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Housing_Unit__c</fullName>
    <description>Housing unit assigned during this stay.</description>
    <label>Housing Unit</label>
    <referenceTo>Housing_Unit__c</referenceTo>
    <relationshipLabel>Location Stays</relationshipLabel>
    <relationshipName>Housing_Unit_Location_Stays</relationshipName>
    <type>Lookup</type>
</CustomField>