force-app/main/default/objects/Animal_Location_Stay__c/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <description
  >Marks the stay as the active placement for the episode.</description>
    <label>Is Current</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>