force-app/main/default/objects/Animal_Location_Stay__c/fields/Move_Reason__c.field-meta.xml
<CustomField>
    <fullName>Move_Reason__c</fullName>
    <description>Reason the stay started.</description>
    <label>Move Reason</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Intake Placement</fullName>
            </value>
            <value>
                <fullName>Routine Move</fullName>
            </value>
            <value>
                <fullName>Medical Isolation</fullName>
            </value>
            <value>
                <fullName>Behavioural Management</fullName>
            </value>
            <value>
                <fullName>Foster Transfer</fullName>
            </value>
            <value>
                <fullName>Outcome Processing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>