force-app/main/default/objects/Animal_Location_Stay__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>Date and time the stay started.</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>