force-app/main/default/objects/Animal_Location_Stay__c/validationRules/A360_Stay_End_After_Start.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description
  >Ensures location stay end date times are not before the start date time.</description>
    <errorConditionFormula
  >AND(NOT(ISBLANK(End_DateTime__c)), NOT(ISBLANK(Start_DateTime__c)), End_DateTime__c &lt; Start_DateTime__c)</errorConditionFormula>
    <errorMessage
  >End Date Time must be on or after Start Date Time.</errorMessage>
    <fullName>A360_Stay_End_After_Start</fullName>
</ValidationRule>